--- a/equipment-master-controller/src/main/resources/application.properties
+++ b/equipment-master-controller/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 jdbc.driverClassName = com.sap.db.jdbc.Driver
-jdbc.url = jdbc:sap://zeus.hana.prod.us-east-1.whitney.dbaas.ondemand.com:21022?encrypt=true&validateCertificate=true&currentschema=USR_34QNQ153LAPAY7T13G7EZI2XX
-jdbc.user = USR_34QNQ153LAPAY7T13G7EZI2XX
-jdbc.password = Db6-laN4K_xmVnW1GqaG.hLOEW.dObSoEseFbxsxs1tndNb5ejV08X2Z7D.14OX64MblSx.ZgwZHOtoCXGXc.j-psB0xMMckql5UylCC2WCt_NZRUm3x-VBN1R5qY7kp
+jdbc.url = jdbc:sap://zeus.hana.prod.eu-central-1.whitney.dbaas.ondemand.com:23803?encrypt=true&validateCertificate=true&currentschema=USR_AWUFRLT0MCA9G7MYBQSQ1BI0H
+jdbc.user = USR_AWUFRLT0MCA9G7MYBQSQ1BI0H
+
+jdbc.password =Tk9koVNitmjiXxvIAnJje6XqHO69kdW5A3cNpL2gIwkzSRYjc.qklpaS1UIbdMHQGJuMXgqKYIkX-DG.KRJf6RveBskf-K.b309yCTUVa4mc1Aa7Eq0FSfgo0KmNgYIE
 hibernate.dialect = org.hibernate.dialect.HANAColumnStoreDialect
 # hibernate extra config
 hibernate.show_sql = true
