--- a/equipment-master-controller/manifest.yml
+++ b/equipment-master-controller/manifest.yml
@@ -2,9 +2,9 @@
 applications:
 - name: equipment-master
   memory: 900M
-  host: equipment-master
+  host: cd8e012etrial
   path: /target/equipment-master-controller-0.0.1-SNAPSHOT.war
   buildpack: sap_java_buildpack
   services:
   - hana_db
-  domain: cfapps.us10.hana.ondemand.com
+  domain: cfapps.eu10.hana.ondemand.com
