--- a/equipment-master-controller/pom.xml
+++ b/equipment-master-controller/pom.xml
@@ -12,7 +12,14 @@
 	<description>equipment master controller</description>
 	
 	<dependencies>
-	
+		
+
+<dependency>
+      <groupId>org.apache.poi</groupId>
+      <artifactId>poi</artifactId>
+      <version>3.15</version>
+ </dependency>
+
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>javax.servlet-api</artifactId>
@@ -53,35 +60,7 @@
 			<artifactId>spring-cloud-spring-service-connector</artifactId>
 			<version>2.0.7.RELEASE</version>
 		</dependency>
-
-
-
-<dependency>
-	<groupId>javax.xml.bind</groupId>
-	<artifactId>jaxb-api</artifactId>
-	<version>2.2.11</version>
-	</dependency>
-	
-	 <dependency>
-        <groupId>org.hibernate</groupId>
-        <artifactId>hibernate-validator</artifactId>
-        <version>5.4.3.Final</version>
-    </dependency>
-    <dependency>
-        <groupId>org.hibernate</groupId>
-        <artifactId>hibernate-validator-annotation-processor</artifactId>
-        <version>5.4.3.Final</version>
-    </dependency>
-    <dependency>
-        <groupId>org.hibernate</groupId>
-        <artifactId>hibernate-validator-cdi</artifactId>
-        <version>5.4.3.Final</version>
-    </dependency>
-    <dependency>
-        <groupId>org.jboss.logging</groupId>
-        <artifactId>jboss-logging</artifactId>
-        <version>3.3.0.Final</version>
-    </dependency>
+   
 
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
